Change file path for some pages

--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Darumadrop;
-    src: url(/ThematicProject/fonts/DarumadropOne-Regular.ttf);
+    src: url(../fonts/DarumadropOne-Regular.ttf);
 }
 
 body{
