--- a/public/css/name.css
+++ b/public/css/name.css
@@ -5,7 +5,7 @@ body{
 
 @font-face {
     font-family: Darumadrop;
-    src: url(/ThematicProject/fonts/DarumadropOne-Regular.ttf);
+    src: url(../fonts/DarumadropOne-Regular.ttf);
 }
 
 #form-container{
