--- a/public/css/name.css
+++ b/public/css/name.css
@@ -107,3 +107,28 @@ input[type="text"]{
 
     cursor: pointer;
 }
+
+#error-container{
+    position: absolute;
+    text-align: center;
+    visibility: hidden;
+    
+    background-color: white;
+
+
+    min-width:100%;
+    height: 50px;
+    z-index: 1;
+    background-color:red;
+
+}
+
+#error-msg{
+    position: relative;
+    top: 8px;
+    font-family: Satoshi;
+    margin: 0;
+    
+    font-size: 20px;
+    
+}
