--- a/public/css/background.css
+++ b/public/css/background.css
@@ -1,15 +1,16 @@
 .background {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(45deg, #ff9a9e, #fad0c4, #fbc2eb, #a6c1ee, #fbc2eb, #ff9a9e);
+    background: linear-gradient(45deg, #ff9a9e, #fad0c4, #fbc2eb, #a6c1ee);
     background-size: 400% 400%;
-    animation: gradientBG 12s ease infinite;
-    z-index: -1;
+    animation: gradientBG 15s ease infinite;
+    z-index: -1; /* Ensure it stays behind other elements */
+    pointer-events: none; /* Allow interaction with elements above it */
 }
- 
+
 @keyframes gradientBG {
     0% {
         background-position: 0% 50%;
@@ -21,4 +22,3 @@
         background-position: 0% 50%;
     }
 }
- 
