Made the styling of the name page even simpler

--- a/public/css/name.css
+++ b/public/css/name.css
@@ -57,7 +57,7 @@ body{
 
     position: relative;
 
-    margin: 220px 0 5px;
+    margin: 50% 0 5px;
     
     border-style: initial;
     border-radius: 5px;
